--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <activity android:name=".BoundServiceCheckActivity" />
 
         <service
-            android:name=".BroadCastReiverEx"
+            android:name=".BroadCastSenderService"
             android:enabled="true"
             android:exported="true" />
 
