--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,9 @@
             android:name=".StartAndroidMyService"
             android:enabled="true"
             android:exported="true"></service>
+
+
+        <service android:name=".StartAndroidMyServiceBroadcast"/>
     </application>
 
 </manifest>
