--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,13 @@
         <service
             android:name=".StartAndroidLocalBinding"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
+        <activity android:name=".StartAndroidForegroundServiceActivity" />
+
+        <service
+            android:name=".StartAndroidForegroundService"
+            android:exported="false"></service>
     </application>
 
 </manifest>
